fix: padding and z-index-order

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,13 +105,9 @@ h3 {
   color: var(--fg-heading);
 }
 
-
-
 a:hover {
   color: var(--accent-primary);
 }
-
-
 
 /* Mobile */
 @media (max-width: 700px) {
@@ -195,6 +191,7 @@ a:hover {
   max-width: 350px;
   position:relative; 
 }
+
 label {
   color: #333333; 
   font-size:14px;
@@ -211,7 +208,7 @@ label {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 2rem;
+  padding: 0;
   gap: 1rem;
   justify-content: center;
   align-items: center;
